# RUST

DSA/01_star_pattern/1.5_num_star_pattern/src/: main.rs
DSA/01_star_pattern/src/: main.rs
DSA/02_num_star_pattern/src/: main.rs
DSA/02_rust_collections/: Cargo.toml
DSA/02_rust_collections/src/: main.rs
Learning/01_Variables/src/: main.rs
Learning/02_if/: if1.rs
Learning/03.2_Data_Types/src/: array_Slices.rs  main.rs
Learning/03.3_Struct_and_enums/src/: main.rs  struct_learning_activity.rs
Learning/03_Data_Types/03.1_Variables-and-Mutability/: Cargo.toml
Learning/03_Data_Types/src/: reserve.rs
Learning/04_primitive_types/: primitive_types3.rs
Learning/05_Accounts_basic/: Cargo.toml
Learning/05_Accounts_basic/src/: main.rs
Learning/07_token_program_22/: Cargo.toml
Learning/07_token_program_22/src/: main.rs
Learning/08_File_in_rust/: Cargo.toml
Learning/08_File_in_rust/src/: main.rs
Learning/09_borrowing_and_move/src/: main.rs
Learning/10_ownership/: Cargo.toml
Learning/10_ownership/src/: main.rs
Learning/threads/src/: main.rs
Projects/01-Guessing_Game/: Cargo.toml  README.md
Projects/01_CLI_Guessing_Game/src/: main.rs
Projects/01_CLI_Todo_App/: Cargo.toml  info.json
Projects/01_CLI_Todo_App/src/: main.rs
Projects/02-Todo_application/src/: main.rs
Projects/02_CLI_Password_Manager/: Cargo.toml  one.json
Projects/02_CLI_Password_Manager/src/: main.rs
Projects/03_Temparature_converture/src/: main.rs
Projects/04_fibonacci_number/: Cargo.toml
Projects/04_fibonacci_number/src/: main.rs
src/: main.rs
(+6 files in other folders)
