[package]
name = "RUST"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
colored = "3.0.0"
once_cell = "1.21.3"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
tabled = {version = "0.20.0", features = ["derive"]}
